<resources>
    <string name="app_name">Supermarket Shopping</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="register_validate">Email and Password should be filled.</string>
    <string name="click_to_login"><u>Click to Login</u></string>
    <string name="click_to_register">Don\'t have an account? <font fgcolor='#FF0075FF'><u><b>Sign Up!</b></u></font></string>
    <string name="login_validate_fields">Email or Password are empty</string>
    <string name="add_new">Add new</string>
    <string name="edit">Edit</string>
    <string name="email_validate">Please enter a valid email</string>
    <string name="account_created">Account created :)</string>
    <string name="account_created_error">Something went wrong :(</string>
    <string name="no_products">No Products</string>
    <string name="product_name">Product name</string>
    <string name="product_value">Product value</string>
    <string name="new_product">New Product</string>
    <string name="total">Total</string>
    <string name="update_register">Update Register</string>
    <string name="cancel">Cancel</string>
    <string name="registered_successfully">Registered Successfully :)</string>
    <string name="successfully_edited">Successfully edited :)</string>
    <string name="market_name">market name</string>
    <string name="enter_market_name">Enter market name</string>
    <string name="fill_in_all_fields">Fill in all fields</string>
    <string name="no_items_yet">No items yet</string>
    <string name="enter_new_value">Enter new value</string>
    <string name="enter_new_description">Enter new description</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="quantity">Quantity</string>
    <string name="add_product">Add Product</string>
</resources>